hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__void_in_arrays.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Void values cannot be used as array elements at index 0",
                span: 2:32; [32, 35],
                level: Error,
            },
        ],
        inputs: (),
    },
)
